Update:Feat added on buyer and website upadted

--- a/src/administration/client/templates/client/client_dashboard.html
+++ b/src/administration/client/templates/client/client_dashboard.html
@@ -68,7 +68,7 @@
                                      <div class="col-12">
                                         <label class="text-warning">Subscribe to our NewLetter</label><br>
                                          <a href="{% url 'client:user-change' %}" class="btn custom_btn text-white mt-2">Edit Profile</a><br>
-                                         <button type="button" class="btn custom_btn text-white mt-2">Change Password</button>
+                                         <a href="{% url 'client:user-password-check' %}" class="btn custom_btn text-white mt-2">Change Password</a>
                                      </div>
                                   </div>
                               </div>
