--- a/src/administration/client/templates/client/password_set_form.html
+++ b/src/administration/client/templates/client/password_set_form.html
@@ -13,14 +13,14 @@
 
                             <div class="total_revenue aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
                                 <div class="vd_title_wrap">
-                                    <h3>Password Change</h3>
+                                    <h3>Password Set</h3>
                                 </div>
                                 <div class="vd_shadow">
                                     <div class="row">
                                         <form method="post" enctype="multipart/form-data">
                                             {% csrf_token %}
                                             {{ form|crispy }}
-                                            <button class="btn text-white" style="background-color: #f7b33c"
+                                            <button class="btn text-white btn-sm" style="background-color: #f7b33c"
                                                     type="submit">Update
                                             </button>
                                         </form>
