--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -171,7 +171,7 @@
                             <ul class="product_action_btns ul_li_block d-flex">
                                 <li><a class="tooltips" data-placement="top"
                                        title="Search Product"
-                                       href="{% url 'website:product-detail' object.pk %}"><i
+                                       href="{% url 'website:wishlist-add' object.pk %}"><i
                                         class="far fa-heart"></i></a>
                                 </li>
                             </ul>
