--- a/src/administration/client/templates/client/order_detail.html
+++ b/src/administration/client/templates/client/order_detail.html
@@ -488,8 +488,17 @@
                                         <div class="card">
                                             <div class="card-body">
                                                 <label style="font-size: 22px"><b>Order # {{ object.id }}</b></label>
-                                                <p class="float-end text-warning  fs-11">Total {{ object.sub_total|floatformat:"2" }}</p>
-                                                <p class="  fs-11">Placed on {{ object.created_on}}</p>
+                                                <p class="float-end text-warning  fs-11">
+                                                    Total {{ object.sub_total|floatformat:"2" }}</p>
+                                                <p class="  fs-11">Placed on {{ object.created_on }}</p>
+                                                {% if object.payment_status == "unpaid" %}
+                                                    <p class=" float-end fs-11">
+                                                        <a href="{% url 'razorpay:pay' object.id %}"><i class=" float-end fa fa-credit-card-alt text-success">&nbsp;&nbsp;repay</i></a><br>
+                                                        <a href="#"><i class="fa fa-times text-danger">&nbsp;&nbsp;Cancel</i></a>
+                                                    </p>
+                                                {% else %}
+
+                                                {% endif %}
                                             </div>
                                         </div>
                                         <div class="card mt-4">
@@ -499,7 +508,7 @@
                                                    style="background-color: #f5b23c"
                                                    class="p-1 float-end px-2 text-white">Chat With Seller
                                                 </a>
-                                                <p class=" fs-11">Placed on {{ object.created_on}}</p>
+                                                <p class=" fs-11">Placed on {{ object.created_on }}</p>
                                                 <hr>
                                                 <p class=" float-end text-warning">Stander delivery</p>
                                                 <p class="text-warning">Get by fri 22 mar - fri 29 mar</p>
@@ -511,37 +520,38 @@
                                                     </ol>
                                                 </nav>
                                                 {% for obj in object.get_cart %}
-                                                <div class="row align-items-end mt-3 mb-3">
-                                                    <div class="col-sm-4">
-                                                        <div class="d-flex position-relative">
-                                                            <img src="{{ obj.product.thumbnail_image|image_or_placeholder }}"
-                                                                 style="height: 70px;"
-                                                                 class="flex-shrink-0 me-3 avatar-xl rounded"
-                                                                 alt="...">
-                                                            <div>
-                                                                <p class="mt-0">{{ obj.product.title }}</p>
+                                                    <div class="row align-items-end mt-3 mb-3">
+                                                        <div class="col-sm-4">
+                                                            <div class="d-flex position-relative">
+                                                                <img src="{{ obj.product.thumbnail_image|image_or_placeholder }}"
+                                                                     style="height: 70px;"
+                                                                     class="flex-shrink-0 me-3 avatar-xl rounded"
+                                                                     alt="...">
+                                                                <div>
+                                                                    <p class="mt-0">{{ obj.product.title }}</p>
+                                                                </div>
+                                                                <div>
+                                                                </div>
                                                             </div>
+                                                        </div>
+                                                        <div class="col-sm-2 mt-2 text-center">
                                                             <div>
+                                                                <p class="mt-2 text-warning ">
+                                                                    Total:{{ obj.get_total_price }}</p>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="col-sm-2 mt-2 text-center">
-                                                        <div>
-                                                            <p class="mt-2 text-warning ">Total:{{ obj.get_total_price }}</p>
+                                                        <div class="col-sm-2 text-center">
+                                                            <div>
+                                                                <p class="mt- text-warning ">Qty:{{ obj.qty }} </p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-sm-4 text-end">
+                                                            <a href=#"
+                                                               style="background-color: #f5b23c"
+                                                               class="p-1 px-2 text-white">Cancel
+                                                            </a>
                                                         </div>
                                                     </div>
-                                                    <div class="col-sm-2 text-center">
-                                                        <div>
-                                                            <p class="mt- text-warning ">Qty:{{ obj.qty }} </p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-4 text-end">
-                                                        <a href=#"
-                                                           style="background-color: #f5b23c"
-                                                           class="p-1 px-2 text-white">Cancel
-                                                        </a>
-                                                    </div>
-                                                </div>
                                                 {% endfor %}
                                             </div>
                                         </div>
@@ -554,9 +564,10 @@
                                                 <label style="font-size: 20px" class="my-3">Shipping Address</label>
                                                 <div class="card">
                                                     <div class="card-body">
-                                                        <p class=" m-0">{{ object.full_name}}</p>
+                                                        <p class=" m-0">{{ object.full_name }}</p>
                                                         <p class=" m-0">{{ object.contact }}</p>
-                                                        <p class="  m-0">{{ object.address }} &nbsp;{{ object.city }} &nbsp;{{ object.state }} &nbsp;{{ object.country }} </p>
+                                                        <p class="  m-0">{{ object.address }} &nbsp;{{ object.city }}
+                                                            &nbsp;{{ object.state }} &nbsp;{{ object.country }} </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -564,9 +575,10 @@
                                                 <label style="font-size: 20px" class="my-3">Billing address</label>
                                                 <div class="card">
                                                     <div class="card-body">
-                                                            <p class=" m-0">{{ object.full_name}}</p>
+                                                        <p class=" m-0">{{ object.full_name }}</p>
                                                         <p class=" m-0">{{ object.contact }}</p>
-                                                        <p class="  m-0">{{ object.address }} &nbsp;{{ object.city }} &nbsp;{{ object.state }} &nbsp;{{ object.country }} </p>
+                                                        <p class="  m-0">{{ object.address }} &nbsp;{{ object.city }}
+                                                            &nbsp;{{ object.state }} &nbsp;{{ object.country }} </p>
                                                     </div>
                                                 </div>
                                             </div>
