--- a/src/administration/client/templates/client/password_change_form.html
+++ b/src/administration/client/templates/client/password_change_form.html
@@ -20,7 +20,7 @@
                                         <form method="post" enctype="multipart/form-data">
                                             {% csrf_token %}
                                             {{ form|crispy }}
-                                            <button class="btn text-white" style="background-color: #f7b33c"
+                                            <button class="btn text-white btn-sm" style="background-color: #f7b33c"
                                                     type="submit">Update
                                             </button>
                                         </form>
