--- a/src/administration/client/templates/client/wishlist_list.html
+++ b/src/administration/client/templates/client/wishlist_list.html
@@ -1,4 +1,5 @@
 {% extends  'website/base.html' %}
+{% load custom_tags %}
 {% load static %}
 
 {% block content %}
@@ -12,51 +13,67 @@
                         <div class="tab-pane fade show active" id="tab_dashboard" role="tabpanel">
                             <div class="total_revenue aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
                                 <div class="vd_title_wrap">
-                                    <h3>Cancel Orders</h3>
+                                    <h3>Wishlist</h3>
                                 </div>
                                 <div class="row">
-                                    {% for object in '12345' %}
-                                        <div class="col-sm-12 m-2">
-                                            <div class="card">
-                                                <div class="card-body">
+                                    {% if object_list %}
+                                        {% for object in object_list %}
+                                            <div class="col-sm-12 m-2">
+                                                <div class="card">
+                                                    <div class="card-body">
 
-                                                    <label style="font-size: 22px"><b>Dry Fruit of Mix</b></label>
-                                                    <p>purchased on 22 nov 2023</p>
-                                                    <div class="row align-items-end">
-                                                        <div class="col-sm-4">
-                                                            <div class="d-flex position-relative">
-                                                                <img src="{% static 'website/images/meta/meta1.png' %}"
-                                                                     style="height: 70px;"
-                                                                     class="flex-shrink-0 me-3 avatar-xl rounded"
-                                                                     alt="...">
+                                                        <label style="font-size: 22px"><b>{{ object.product.category }}</b></label>
+                                                        <p>{{ object.product.created_on }}</p>
+                                                        <div class="row align-items-end">
+                                                            <div class="col-sm-4">
+                                                                <div class="d-flex position-relative">
+                                                                    <img src="{{ object.product.thumbnail_image|image_or_placeholder }}"
+                                                                         style="height: 70px;"
+                                                                         class="flex-shrink-0 me-3 avatar-xl rounded"
+                                                                         alt="...">
+                                                                    <div>
+                                                                        <p class="mt-0">{{ object.product.title }}</p>
+                                                                    </div>
+                                                                </div>
+
+                                                            </div>
+                                                            <div class="col-sm-4 text-center">
                                                                 <div>
-                                                                    <p class="mt-0">Custom component with stretched
-                                                                        link</p>
+                                                                    <p class="mt- text-warning ">
+                                                                        Qty:{{ object.product.quantity }} </p>
                                                                 </div>
                                                             </div>
-
-                                                        </div>
-                                                        <div class="col-sm-4 text-center">
-                                                            <div>
-                                                                <p class="mt- text-warning ">Qty:1 </p>
+                                                            <div class="col-sm-4 text-end">
+                                                                <a href="{% url 'client:wishlist-delete' object.id %}"
+                                                                   style="background-color: #cc0f0f"
+                                                                   class="p-1 text-white px-3 "><i
+                                                                        class="fa fa-times" aria-hidden="true"></i>
+                                                                </a>&nbsp;&nbsp;<a
+                                                                    href="{% url 'website:product-detail' object.product.id %}"
+                                                                    style="background-color: #fdc315"
+                                                                    class="p-1 px-4 text-white"><i
+                                                                    class="fa fa-eye" aria-hidden="true"></i>
+                                                            </a>
                                                             </div>
-                                                        </div>
-                                                        <div class="col-sm-4 text-end">
-                                                            <a style="background-color: #fdc315"
-                                                               class="p-1 text-white px-3 text-dark"><i
-                                                                    class="fa fa-times" aria-hidden="true"></i>
-
-                                                            </a>&nbsp;&nbsp;<a style="background-color: #fdc315"
-                                                                               class="p-1 px-4 text-white"><i
-                                                                class="fa fa-shopping-cart" aria-hidden="true"></i>
-
-                                                        </a>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
+
+                                        {% endfor %}
+                                    {% else %}
+                                        <div class="col-sm-12 m-2">
+                                            <div class="card p-4">
+                                                <div class="card-body">
+                                                    <div class="text-center">
+                                                        <h4 class="text-danger ">Wishlist is Empty</h4>
+                                                        <a href="{% url 'website:shop' %}" class="btn btn-secondary  btn-sm">Back to Shopping
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                    {% endfor %}
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -65,4 +82,6 @@
             </div>
         </div>
     </section>
+
+
 {% endblock %}
