Issue:Issue Resolved on admin orders

--- a/src/administration/admins/templates/admins/base.html
+++ b/src/administration/admins/templates/admins/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>
         {% block base_title %}
-            Monogatari | {% block base_subtitle %}{% endblock %}
+            Rajasthan Dry Fruit House | {% block base_subtitle %}{% endblock %}
         {% endblock %}
     </title>
 
@@ -20,7 +20,10 @@
     <link href="{% static 'admin/css/tabler-payments.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/tabler-vendors.min.css' %}?1668287865" rel="stylesheet"/>
     <link href="{% static 'admin/css/demo.min.css' %}?1668287865" rel="stylesheet"/>
-    <link href="{% static 'core/css/icons.css' %}" rel="stylesheet"/>
+{#    <link href="{% static 'core/css/icons.css' %}" rel="stylesheet"/>#}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <script src="{% static 'required/js/jquery-3.6.2.slim.min.js' %}"></script>
 
     {# INTERNAL CSS #}
