--- a/src/administration/admins/templates/admins/order_list.html
+++ b/src/administration/admins/templates/admins/order_list.html
@@ -52,32 +52,17 @@
                                 <tr class="">
                                     <td>
                                         <b>
-                                            <a href="{% url 'admins:user-detail' object.user.pk %}">{{ object.user.name_or_username }}</a>
+                                            <a href="{% url 'admins:user-detail' object.client.pk %}">{{ object.client.name_or_username }}</a>
                                         </b>
                                     </td>
                                     <td>{{ object.total }}</td>
                                     <td>{{ object.paid }}</td>
                                     <td>{{ object.created_on }}</td>
                                     <td>
-                                        {% if object.order_status == 'pending' %}
-                                            <span class="badge bg-yellow-lt">{{ object.get_order_status_display }}</span>
-                                        {% elif object.order_status == 'shipping' %}
-                                            <span class="badge bg-azure-lt">{{ object.get_order_status_display }}</span>
-                                        {% elif object.order_status == 'completed' %}
-                                            <span class="badge bg-success-lt">{{ object.get_order_status_display }}</span>
-                                        {% else %}
-                                            <span class="badge bg-danger-lt">{{ object.get_order_status_display }}</span>
-
-                                        {% endif %}
+                                        <span class="badge bg-{{ object.order_status|alert_type_class }}-lt">{{ object.get_order_status_display }}</span>
                                     </td>
                                     <td>
-                                        {% if object.payment_status == 'pending' %}
-                                            <span class="badge bg-yellow-lt">{{ object.get_payment_status_display }}</span>
-                                        {% elif object.payment_status == 'completed' %}
-                                            <span class="badge bg-success-lt">{{ object.get_payment_status_display }}</span>
-                                        {% else %}
-                                            <span class="badge bg-danger-lt">{{ object.get_payment_status_display }}</span>
-                                        {% endif %}
+                                        <span class="badge bg-{{ object.order_status|alert_type_class }}-lt">{{ object.get_payment_status_display }}</span>
                                     </td>
                                     <td>
                                         <a class="text-primary" href="{% url 'admins:order-detail' object.pk %}">
