--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -6,7 +6,7 @@
             <div class="container">
                <div class="footer_top_content d-flex flex-column flex-lg-row justify-content-between align-items-center">
                   <div class="footer_top_logo">
-                     <a href="index.html"><img src="{% static 'website/images/logo/logo.png' %}" style="height: 100px" alt="image_not_found"></a>
+                     <a href="{%  url 'website:home' %}"><img src="{% static 'website/images/logo/logo.png' %}" style="height: 100px" alt="image_not_found"></a>
                   </div>
                   <div class="footer_top_subs position-relative">
                      <input class="rounded-pill" type="search" name="search" placeholder="Your Phone Number">
@@ -32,12 +32,10 @@
                                  </h4>
                               </div>
                               <div class="footer_inner_choose_desc pt-2">
-                                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                    ex ea
-                                    commodo. Build your online store with WooCommerce the most popular </p>
+                                 <p>Welcome to our e-commerce system dedicated to providing the finest dry fruits. Discover a variety of premium nuts, dried berries, and more, all sourced from the best growers. Shop with us for quality and freshness delivered right to your doorstep. </p>
                               </div>
                               <div class="footer_inner_choose">
-                                 <a href="#!"><button type="button" class="btn custom_btn rounded-pill px-4 text-white">View More <i class="fas fa-long-arrow-alt-right"></i></button></a>
+                                 <a href="{% url 'website:shop' %}"><button type="button" class="btn custom_btn rounded-pill px-4 text-white">View More <i class="fas fa-long-arrow-alt-right"></i></button></a>
                               </div>
                            </div>
                         </div>
@@ -50,11 +48,11 @@
                               </div>
                               <div class="footer_inner_info_item pt-2">
                                  <ul class="list-unstyled">
-                                    <li><a href="#!">About Us</a></li>
-                                    <li><a href="#!">Delivery Information</a></li>
-                                    <li><a href="#!">Privacy Policy</a></li>
-                                    <li><a href="#!">Terms &amp; Conditions</a></li>
-                                    <li><a href="#!">Return Policy</a></li>
+                                    <li><a href="{% url 'website:about_us' %}">About Us</a></li>
+                                    <li><a href="{% url 'website:about_us' %}">Delivery Information</a></li>
+                                    <li><a href="{% url 'website:privacy' %}">Privacy Policy</a></li>
+                                    <li><a href="{% url 'website:terms' %}">Terms &amp; Conditions</a></li>
+                                    <li><a href="{% url 'website:return_policy' %}">Return Policy</a></li>
                                  </ul>
                               </div>
                            </div>
@@ -63,15 +61,15 @@
                            <div class="footer_inner_acct_content">
                               <div class="footer_inner_acct_title">
                                  <h4>
-                                    <a href="#!" class="text-white">My Account</a>
+                                    <a href="#" class="text-white">My Account</a>
                                  </h4>
                               </div>
                               <div class="footer_inner_acct_item pt-2">
                                  <ul class="list-unstyled">
-                                    <li><a href="#!">My Account</a></li>
-                                    <li><a href="#!">Shopping Cart</a></li>
-                                    <li><a href="#!">Wishlist</a></li>
-                                    <li><a href="#!">Order History</a></li>
+                                    <li><a href="{% url 'client:dashboard' %}">My Account</a></li>
+                                    <li><a href="{%  url 'website:cart' %}">Shopping Cart</a></li>
+                                    <li><a href="{%  url 'website:wishlist_list' %}">Wishlist</a></li>
+                                    <li><a href="{%  url 'website:order' %}">Order History</a></li>
                                     <li><a href="#!">International Orders</a></li>
                                  </ul>
                               </div>
@@ -85,11 +83,11 @@
                                  </h4>
                               </div>
                               <div class="footer_inner_ctc_info pt-2 text-white">
-                                 <p>Address: <font>1429 Netus Rd, NY 48247</font>
+                                 <p>Address: <font>Delhi Mombai</font>
                                  </p>
-                                 <p>Email: <font>Organi@gmail.com</font>
+                                 <p>Email: <font>dryfruitsofficial@gmail.com</font>
                                  </p>
-                                 <p>Phone: <font>(+87) 4886-4174</font>
+                                 <p>Phone: <font>93:1221222112</font>
                                  </p>
                                  <div class="footer_inner_payment_ctc">
                                     <div class="footer_inner_payment_title">
